REST API working, created gallery html

--- a/test.html
+++ b/test.html
@@ -35,7 +35,7 @@
     <input type="button" onclick="findUserById(8)" value="Encontrar por id">
     <input type="button" onclick="addUser()" value="Añadir cliente">
     <input type="button" onclick="editUser(8)" value="Editar cliente">
-    <input type="button" onclick="deleteUserById(15)" value="borrar">
+    <input type="button" onclick="deleteUserById(7)" value="borrar">
     <h3>Messages</h3>
     <input type="button" onclick="findAllMessages()" value="Encontrar Mensajes">
     <input type="button" onclick="findMessageById(6)" value="Encontrar por id">
@@ -52,9 +52,13 @@
     <h3>Bookings</h3>
     <input type="button" onclick="findAllBookings()" value="Encontrar Reserva">
     <input type="button" onclick="findBookingById(6)" value="Encontrar por id">
+    <input type="button" onclick="findBookingByUser(6)" value="Encontrar por user">
+    <input type="button" onclick="findBookingByProduct(1)" value="Encontrar por product">
+    <input type="button" onclick="findBookingByDate('2022-04-11')" value="Encontrar por fecha">
     <input type="button" onclick="addBooking()" value="Añadir Reserva">
     <input type="button" onclick="editBooking(6)" value="Editar Reserva">
     <input type="button" onclick="deleteBookingById(7)" value="borrar">
+
 
 
 </body>
