--- a/products.html
+++ b/products.html
@@ -31,16 +31,13 @@
             <!-- Current: Default: "border-transparent text-white hover:border-sky-500 hover:text-white" -->
             <a href="#"
               class="border-sky-500 text-white inline-flex items-center px-1 pt-1 border-b-2 text-sm font-medium">
-              Dashboard </a>
+              Home </a>
             <a href="#"
               class="border-transparent text-white hover:border-sky-500 hover:text-white inline-flex items-center px-1 pt-1 border-b-2 text-sm font-medium">
-              Team </a>
+              Tours </a>
             <a href="#"
               class="border-transparent text-white hover:border-sky-500 hover:text-white inline-flex items-center px-1 pt-1 border-b-2 text-sm font-medium">
-              Projects </a>
-            <a href="#"
-              class="border-transparent text-white hover:border-sky-500 hover:text-white inline-flex items-center px-1 pt-1 border-b-2 text-sm font-medium">
-              Calendar </a>
+              Dónde comer en Segovia </a>
           </div>
         </div>
         <div class="hidden sm:ml-6 sm:flex sm:items-center">
@@ -129,13 +126,11 @@
       <div class="pt-2 pb-3 space-y-1">
         <!-- Current: "bg-indigo-50 border-sky-500 text-indigo-700", Default: "border-transparent text-white hover:bg-gray-50 hover:border-sky-500 hover:text-white" -->
         <a href="#"
-          class="bg-indigo-50 border-sky-500 text-sky-800 block pl-3 pr-4 py-2 border-l-4 text-base font-medium">Dashboard</a>
+          class="bg-indigo-50 border-sky-500 text-sky-800 block pl-3 pr-4 py-2 border-l-4 text-base font-medium">Home</a>
         <a href="#"
-          class="border-transparent text-sky-800 hover:bg-gray-50 hover:border-sky-500  block pl-3 pr-4 py-2 border-l-4 text-base font-medium">Team</a>
+          class="border-transparent text-sky-800 hover:bg-gray-50 hover:border-sky-500  block pl-3 pr-4 py-2 border-l-4 text-base font-medium">Tours</a>
         <a href="#"
-          class="border-transparent text-sky-800 hover:bg-gray-50 hover:border-sky-500  block pl-3 pr-4 py-2 border-l-4 text-base font-medium">Projects</a>
-        <a href="#"
-          class="border-transparent text-sky-800 hover:bg-gray-50 hover:border-sky-500  block pl-3 pr-4 py-2 border-l-4 text-base font-medium">Calendar</a>
+          class="border-transparent text-sky-800 hover:bg-gray-50 hover:border-sky-500  block pl-3 pr-4 py-2 border-l-4 text-base font-medium">Dónde comer en Segovia</a>
       </div>
       <div class="pt-4 pb-3 border-t border-gray-200">
         <div class="flex items-center px-4">
