--- a/admin-booking.html
+++ b/admin-booking.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="h-full bg-white">
 
 <head>
     <meta charset="UTF-8">
@@ -9,17 +9,10 @@
     <link rel="stylesheet" href="/css/tailwind-out.css">
     <script src="js/base-script.js"></script>
     <script src="js/scriptAPI.js"></script>
-    <script src="js/admin-product-edit.js"></script>
-
-    <style>
-        #1{
-
-            color: red;
-        }
-    </style>
+    <script src="js/admin-booking.js"></script>
 </head>
 
-<body>
+<body class="h-full">
 
     <!-- NavBar -->
 
@@ -127,8 +120,7 @@
         <div class="hidden bg-white" id="mobile-menu">
             <div class="pt-2 pb-3 space-y-1">
                 <!-- Current: "bg-indigo-50 border-sky-500 text-indigo-700", Default: "border-transparent text-white hover:bg-gray-50 hover:border-sky-500 hover:text-white" -->
-                <a href="/admin.html"
-                    class=" text-sky-800 block pl-3 pr-4 py-2  text-base font-medium">Panel
+                <a href="/admin.html" class=" text-sky-800 block pl-3 pr-4 py-2  text-base font-medium">Panel
                     de administración</a>
             </div>
             <div class="pt-4 pb-3 border-t border-gray-200">
@@ -169,64 +161,96 @@
 
     <!-- CONTENT -->
 
-    <div class="space-y-6 my-8 mx-auto max-w-5xl">
-        <div class="bg-white shadow-lg px-4 py-5 sm:rounded-lg sm:p-6">
-            <div class="md:grid md:grid-cols-3 md:gap-6">
-                <div class="md:col-span-1">
-                    <h3 class="text-lg font-medium leading-6 text-gray-900">Nuevo producto</h3>
-                    <p class="mt-1 text-sm text-gray-500">Introduce la infromación del producto que quieres añadir</p>
+    <div class="min-h-full">
+
+        <!-- Page heading -->
+        <header class="bg-gray-50 py-8">
+            <div class="max-w-4xl mx-auto px-4 sm:px-6 lg:px-8 xl:flex xl:items-center xl:justify-between">
+                <div class="flex-1 min-w-0">
+                    <h1 class="mt-2 text-2xl font-bold leading-7 text-gray-900 sm:text-3xl sm:truncate">Reservas</h1>
                 </div>
-                <div class="mt-5 md:mt-0 md:col-span-2">
+                <div class="mt-5 flex xl:mt-0 xl:ml-4">
+                    <span class="hidden sm:block">
+                        <a href="/admin-booking-new.html">
 
-                    <!-- form -->
-                    <form id="form" class="space-y-6" action="/admin-product.html" method="POST" enctype="multipart/form-data">
-
-                        <div class="col-span-6 sm:col-span-4">
-                            <label for="name" class="block text-sm font-medium text-gray-700">Nombre del
-                                producto</label>
-                            <input type="text" name="name" id="name" autocomplete="Nombre"
-                                class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
-                        </div>
-
-                        <div class="col-span-6 sm:col-span-4">
-                            <label for="description" class="block text-sm font-medium text-gray-700">Descripción</label>
-                            <input type="text" name="description" id="description" autocomplete="Descripcion"
-                                class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
-                        </div>
-
-                        <div class="col-span-6 sm:col-span-4">
-                            <label for="price" class="block text-sm font-medium text-gray-700">Precio</label>
-                            <input type="text" name="price" id="price" autocomplete="Precio"
-                                class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
-                        </div>
-
-                        <div class="col-span-6 sm:col-span-4">
-                            <label for="capacity" class="block text-sm font-medium text-gray-700">Capacidad</label>
-                            <input type="number" name="capacity" id="capacity" autocomplete="Precio"
-                                class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
-                        </div>
-
-
-                        <div>
-                            <label for="image" class="block text-sm font-medium text-gray-700"> Imagen de portada </label>
-                            <input type="file" name="image" id="image" class="my-2" accept="image/png, image/jpeg">
-                        </div>
-
-                        <div class="flex justify-end">
-                            <a href="/admin-product.html">
-
-                                <button type="button"
-                                    class="bg-white py-2 px-4 border border-gray-300 rounded-md shadow-sm text-sm font-medium text-gray-700 hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">Cancelar</button>
-                            </a>
-                            <button type="submit"
-                                class="ml-3 inline-flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-sky-500 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">Guardar</button>
-                        </div>
-                    </form>
+                            <button type="button"
+                                class="inline-flex items-center px-4 py-2 border border-gray-300 rounded-md shadow-sm text-sm font-medium text-white bg-sky-500 hover:bg-sky-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-offset-gray-50 focus:ring-purple-500">
+                                <!-- Heroicon name: solid/pencil -->
+                                <svg class="h-6 w-6" x-description="Heroicon name: outline/plus-sm"
+                                    xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
+                                    stroke="currentColor" aria-hidden="true">
+                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                        d="M12 6v6m0 0v6m0-6h6m-6 0H6">
+                                    </path>
+                                </svg>
+                                Nueva
+                            </button>
+                        </a>
+                    </span>
                 </div>
             </div>
-        </div>
+        </header>
+
+        <main class="pt-8 pb-16">
+            <div class="max-w-5xl mx-auto sm:px-6 lg:px-8">
+                <!-- Stacked list -->
+                <ul id="booking-list" role="list"
+                    class="mt-5 border-t border-gray-200 divide-y divide-gray-200 sm:mt-0 sm:border-t-0">
+                    <!-- Products from database... -->
 
 
+                </ul>
+
+                <!-- Pagination -->
+                <nav class="border-t border-gray-200 px-4 flex items-center justify-between sm:px-0"
+                    aria-label="Pagination">
+                    <div class="-mt-px w-0 flex-1 flex">
+                        <a href="#"
+                            class="border-t-2 border-transparent pt-4 pr-1 inline-flex items-center text-sm font-medium text-gray-500 hover:text-gray-700 hover:border-gray-200">
+                            <!-- Heroicon name: solid/arrow-narrow-left -->
+                            <svg class="mr-3 h-5 w-5 text-gray-400" xmlns="http://www.w3.org/2000/svg"
+                                viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+                                <path fill-rule="evenodd"
+                                    d="M7.707 14.707a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414l4-4a1 1 0 011.414 1.414L5.414 9H17a1 1 0 110 2H5.414l2.293 2.293a1 1 0 010 1.414z"
+                                    clip-rule="evenodd" />
+                            </svg>
+                            Previous
+                        </a>
+                    </div>
+                    <div class="hidden md:-mt-px md:flex">
+                        <!-- Current: "border-purple-500 text-purple-600", Default: "border-transparent text-gray-500 hover:text-gray-700 hover:border-gray-200" -->
+                        <a href="#"
+                            class="border-purple-500 text-purple-600 border-t-2 pt-4 px-4 inline-flex items-center text-sm font-medium"
+                            aria-current="page"> 1 </a>
+                        <a href="#"
+                            class="border-transparent text-gray-500 hover:text-gray-700 hover:border-gray-200 border-t-2 pt-4 px-4 inline-flex items-center text-sm font-medium">
+                            2 </a>
+                        <a href="#"
+                            class="border-transparent text-gray-500 hover:text-gray-700 hover:border-gray-200 border-t-2 pt-4 px-4 inline-flex items-center text-sm font-medium">
+                            3 </a>
+                        <a href="#"
+                            class="border-transparent text-gray-500 hover:text-gray-700 hover:border-gray-200 border-t-2 pt-4 px-4 inline-flex items-center text-sm font-medium">
+                            4 </a>
+                        <a href="#"
+                            class="border-transparent text-gray-500 hover:text-gray-700 hover:border-gray-200 border-t-2 pt-4 px-4 inline-flex items-center text-sm font-medium">
+                            5 </a>
+                    </div>
+                    <div class="-mt-px w-0 flex-1 flex justify-end">
+                        <a href="#"
+                            class="border-t-2 border-transparent pt-4 pl-1 inline-flex items-center text-sm font-medium text-gray-500 hover:text-gray-700 hover:border-gray-200">
+                            Next
+                            <!-- Heroicon name: solid/arrow-narrow-right -->
+                            <svg class="ml-3 h-5 w-5 text-gray-400" xmlns="http://www.w3.org/2000/svg"
+                                viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+                                <path fill-rule="evenodd"
+                                    d="M12.293 5.293a1 1 0 011.414 0l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414-1.414L14.586 11H3a1 1 0 110-2h11.586l-2.293-2.293a1 1 0 010-1.414z"
+                                    clip-rule="evenodd" />
+                            </svg>
+                        </a>
+                    </div>
+                </nav>
+            </div>
+        </main>
     </div>
 
 
