--- a/admin.html
+++ b/admin.html
@@ -8,6 +8,8 @@
     <title>Free Tour Segovia</title>
     <link rel="stylesheet" href="/css/tailwind-out.css">
     <script src="js/base-script.js"></script>
+    <script src="js/scriptAPI.js"></script>
+    <script src="js/admin.js"></script>
 </head>
 
 <body class="h-full">
@@ -179,8 +181,8 @@
                                                 <img class="mx-auto h-20 w-20 rounded-full" src="img/Ayuso.jpg" alt="">
                                             </div>
                                             <div class="mt-4 text-center sm:mt-0 sm:pt-1 sm:text-left">
-                                                <p class="text-xl font-bold text-gray-900 sm:text-2xl">Usuario</p>
-                                                <p class="text-sm font-medium text-gray-600">If Admin</p>
+                                                <p class="text-xl font-bold text-gray-900 sm:text-2xl">Alvaro</p>
+                                                <p class="text-sm font-medium text-gray-600">Admin</p>
                                             </div>
                                         </div>
                                     </div>
@@ -188,17 +190,17 @@
                                 <div
                                     class="border-t border-gray-200 bg-gray-50 grid grid-cols-1 divide-y divide-gray-200 sm:grid-cols-3 sm:divide-y-0 sm:divide-x">
                                     <div class="px-6 py-5 text-sm font-medium text-center">
-                                        <span class="text-gray-900">10</span>
+                                        <span class="text-gray-900">X</span>
                                         <span class="text-gray-600">Reservas hoy</span>
                                     </div>
 
                                     <div class="px-6 py-5 text-sm font-medium text-center">
-                                        <span class="text-gray-900">30</span>
+                                        <span class="text-gray-900">XX</span>
                                         <span class="text-gray-600">Reservas esta semana</span>
                                     </div>
 
                                     <div class="px-6 py-5 text-sm font-medium text-center">
-                                        <span class="text-gray-900">100</span>
+                                        <span class="text-gray-900">XXX</span>
                                         <span class="text-gray-600">Reservas este mes</span>
                                     </div>
                                 </div>
@@ -259,7 +261,7 @@
                                     </div>
                                     <div class="mt-8">
                                         <h3 class="text-lg font-medium">
-                                            <a href="#" class="focus:outline-none">
+                                            <a href="/admin-booking.html" class="focus:outline-none">
                                                 <!-- Extend touch target to entire panel -->
                                                 <span class="absolute inset-0" aria-hidden="true"></span>
                                                 Gestión de reservas
@@ -356,60 +358,12 @@
                                     <h2 class="text-base font-medium text-gray-900" id="announcements-title">
                                         Ultimas reservas</h2>
                                     <div class="flow-root mt-6">
-                                        <ul role="list" class="-my-5 divide-y divide-gray-200">
-                                            <li class="py-5">
-                                                <div class="relative focus-within:ring-2 focus-within:ring-cyan-500">
-                                                    <h3 class="text-sm font-semibold text-gray-800">
-                                                        <a href="#" class="hover:underline focus:outline-none">
-                                                            <!-- Extend touch target to entire panel -->
-                                                            <span class="absolute inset-0" aria-hidden="true"></span>
-                                                            Office closed on July 2nd
-                                                        </a>
-                                                    </h3>
-                                                    <p class="mt-1 text-sm text-gray-600 line-clamp-2">Cum qui rem
-                                                        deleniti. Suscipit in dolor veritatis sequi aut. Vero ut earum
-                                                        quis deleniti. Ut a sunt eum cum ut repudiandae possimus. Nihil
-                                                        ex tempora neque cum consectetur dolores.</p>
-                                                </div>
-                                            </li>
+                                        <ul id="last-bookings" role="list" class="-my-5 divide-y divide-gray-200">
 
-                                            <li class="py-5">
-                                                <div class="relative focus-within:ring-2 focus-within:ring-cyan-500">
-                                                    <h3 class="text-sm font-semibold text-gray-800">
-                                                        <a href="#" class="hover:underline focus:outline-none">
-                                                            <!-- Extend touch target to entire panel -->
-                                                            <span class="absolute inset-0" aria-hidden="true"></span>
-                                                            New password policy
-                                                        </a>
-                                                    </h3>
-                                                    <p class="mt-1 text-sm text-gray-600 line-clamp-2">Alias inventore
-                                                        ut autem optio voluptas et repellendus. Facere totam quaerat
-                                                        quam quo laudantium cumque eaque excepturi vel. Accusamus maxime
-                                                        ipsam reprehenderit rerum id repellendus rerum. Culpa cum vel
-                                                        natus. Est sit autem mollitia.</p>
-                                                </div>
-                                            </li>
-
-                                            <li class="py-5">
-                                                <div class="relative focus-within:ring-2 focus-within:ring-cyan-500">
-                                                    <h3 class="text-sm font-semibold text-gray-800">
-                                                        <a href="#" class="hover:underline focus:outline-none">
-                                                            <!-- Extend touch target to entire panel -->
-                                                            <span class="absolute inset-0" aria-hidden="true"></span>
-                                                            Office closed on July 2nd
-                                                        </a>
-                                                    </h3>
-                                                    <p class="mt-1 text-sm text-gray-600 line-clamp-2">Tenetur libero
-                                                        voluptatem rerum occaecati qui est molestiae exercitationem.
-                                                        Voluptate quisquam iure assumenda consequatur ex et recusandae.
-                                                        Alias consectetur voluptatibus. Accusamus a ab dicta et.
-                                                        Consequatur quis dignissimos voluptatem nisi.</p>
-                                                </div>
-                                            </li>
                                         </ul>
                                     </div>
                                     <div class="mt-6">
-                                        <a href="#"
+                                        <a href="/admin-booking.html"
                                             class="w-full flex justify-center items-center px-4 py-2 border border-gray-300 shadow-sm text-sm font-medium rounded-md text-white bg-sky-500 hover:bg-sky-700">
                                             Ver todas </a>
                                     </div>
