CRUD lado admin funcionando

--- a/admin-product.html
+++ b/admin-product.html
@@ -165,7 +165,7 @@
   <div class="min-h-full">
 
     <!-- Page heading -->
-    <header class="bg-gray-50 py-8">
+    <header class="bg-white py-8">
       <div class="max-w-4xl mx-auto px-4 sm:px-6 lg:px-8 xl:flex xl:items-center xl:justify-between">
         <div class="flex-1 min-w-0">
           <h1 class="mt-2 text-2xl font-bold leading-7 text-gray-900 sm:text-3xl sm:truncate">Productos</h1>
