--- a/admin-message-edit.html
+++ b/admin-message-edit.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="/css/tailwind-out.css">
     <script src="js/base-script.js"></script>
     <script src="js/scriptAPI.js"></script>
-    <script src="js/admin-booking.js"></script>
+    <script src="js/admin-message-edit.js"></script>
 </head>
 
 <body class="h-full">
@@ -161,100 +161,41 @@
 
     <!-- CONTENT -->
 
-    <div class="min-h-full">
 
-        <!-- Page heading -->
-        <header class="bg-white py-8">
-            <div class="max-w-4xl mx-auto px-4 sm:px-6 lg:px-8 xl:flex xl:items-center xl:justify-between">
-                <div class="flex-1 min-w-0">
-                    <h1 class="mt-2 text-2xl font-bold leading-7 text-gray-900 sm:text-3xl sm:truncate">Reservas</h1>
-                </div>
-                <div class="mt-5 flex xl:mt-0 xl:ml-4">
-                    <span class="hidden sm:block">
-                        <a href="/admin-booking-new.html">
-
-                            <button type="button"
-                                class="inline-flex items-center px-4 py-2 border border-gray-300 rounded-md shadow-sm text-sm font-medium text-white bg-sky-500 hover:bg-sky-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-offset-gray-50 focus:ring-purple-500">
-                                <!-- Heroicon name: solid/pencil -->
-                                <svg class="h-6 w-6" x-description="Heroicon name: outline/plus-sm"
-                                    xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
-                                    stroke="currentColor" aria-hidden="true">
-                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                        d="M12 6v6m0 0v6m0-6h6m-6 0H6">
-                                    </path>
-                                </svg>
-                                Nueva
-                            </button>
-                        </a>
-                    </span>
-                </div>
+    <header class="bg-white py-8">
+        <div class="max-w-4xl mx-auto px-4 sm:px-6 lg:px-8 xl:flex xl:items-center xl:justify-between">
+            <div class="flex-1 min-w-0">
+                <h1 class="mt-2 text-2xl font-bold leading-7 text-gray-900 sm:text-3xl sm:truncate">Mensaje</h1>
             </div>
-        </header>
 
-        <main class="pt-8 pb-16">
-            <div class="max-w-5xl mx-auto sm:px-6 lg:px-8">
-                <!-- Stacked list -->
-                <ul id="booking-list" role="list"
-                    class="mt-5 border-t border-gray-200 divide-y divide-gray-200 sm:mt-0 sm:border-t-0">
-                    <!-- Products from database... -->
+        </div>
+    </header>
 
-
-                </ul>
-
-                <!-- Pagination -->
-                <nav class="border-t border-gray-200 px-4 flex items-center justify-between sm:px-0"
-                    aria-label="Pagination">
-                    <div class="-mt-px w-0 flex-1 flex">
-                        <a href="#"
-                            class="border-t-2 border-transparent pt-4 pr-1 inline-flex items-center text-sm font-medium text-gray-500 hover:text-gray-700 hover:border-gray-200">
-                            <!-- Heroicon name: solid/arrow-narrow-left -->
-                            <svg class="mr-3 h-5 w-5 text-gray-400" xmlns="http://www.w3.org/2000/svg"
-                                viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
-                                <path fill-rule="evenodd"
-                                    d="M7.707 14.707a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414l4-4a1 1 0 011.414 1.414L5.414 9H17a1 1 0 110 2H5.414l2.293 2.293a1 1 0 010 1.414z"
-                                    clip-rule="evenodd" />
-                            </svg>
-                            Previous
-                        </a>
-                    </div>
-                    <div class="hidden md:-mt-px md:flex">
-                        <!-- Current: "border-purple-500 text-purple-600", Default: "border-transparent text-gray-500 hover:text-gray-700 hover:border-gray-200" -->
-                        <a href="#"
-                            class="border-purple-500 text-purple-600 border-t-2 pt-4 px-4 inline-flex items-center text-sm font-medium"
-                            aria-current="page"> 1 </a>
-                        <a href="#"
-                            class="border-transparent text-gray-500 hover:text-gray-700 hover:border-gray-200 border-t-2 pt-4 px-4 inline-flex items-center text-sm font-medium">
-                            2 </a>
-                        <a href="#"
-                            class="border-transparent text-gray-500 hover:text-gray-700 hover:border-gray-200 border-t-2 pt-4 px-4 inline-flex items-center text-sm font-medium">
-                            3 </a>
-                        <a href="#"
-                            class="border-transparent text-gray-500 hover:text-gray-700 hover:border-gray-200 border-t-2 pt-4 px-4 inline-flex items-center text-sm font-medium">
-                            4 </a>
-                        <a href="#"
-                            class="border-transparent text-gray-500 hover:text-gray-700 hover:border-gray-200 border-t-2 pt-4 px-4 inline-flex items-center text-sm font-medium">
-                            5 </a>
-                    </div>
-                    <div class="-mt-px w-0 flex-1 flex justify-end">
-                        <a href="#"
-                            class="border-t-2 border-transparent pt-4 pl-1 inline-flex items-center text-sm font-medium text-gray-500 hover:text-gray-700 hover:border-gray-200">
-                            Next
-                            <!-- Heroicon name: solid/arrow-narrow-right -->
-                            <svg class="ml-3 h-5 w-5 text-gray-400" xmlns="http://www.w3.org/2000/svg"
-                                viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
-                                <path fill-rule="evenodd"
-                                    d="M12.293 5.293a1 1 0 011.414 0l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414-1.414L14.586 11H3a1 1 0 110-2h11.586l-2.293-2.293a1 1 0 010-1.414z"
-                                    clip-rule="evenodd" />
-                            </svg>
-                        </a>
-                    </div>
-                </nav>
-            </div>
-        </main>
+    <div class="bg-white py-4 px-4 sm:px-6 lg:col-span-3 lg:px-8 xl:pl-12 max-w-2xl mx-auto">
+        <div class="max-w-lg mx-auto lg:max-w-none">
+            <form id="form" action="#" method="POST" class="grid grid-cols-1 gap-y-6 pb-">
+                <div>
+                    <label for="user" class="block text-sm font-medium text-gray-700">User</label>
+                    <input type="text" name="user" id="user" autocomplete="Nombre" disabled
+                        class="block w-full shadow-sm py-3 px-4 placeholder-gray-500 focus:ring-indigo-500 focus:border-indigo-500 border-gray-300 rounded-md">
+                    </input>
+                </div>
+                <div>
+                    <label for="body">Message</label>
+                    <textarea id="body" name="body" rows="4" disabled
+                        class="block w-full shadow-sm py-3 px-4 placeholder-gray-500 focus:ring-indigo-500 focus:border-indigo-500 border border-gray-300 rounded-md"
+                        placeholder="Mensaje"></textarea>
+                </div>
+            </form>
+            <a href="/admin-message.html">
+                <div class="flex justify-end py-4">
+                    <button type="button"
+                        class="inline-flex justify-center py-3 px-6 border border-transparent shadow-sm text-base font-medium rounded-md text-white bg-sky-500 hover:bg-sky-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">Volver
+                        a mensajes</button>
+                </div>
+            </a>
+        </div>
     </div>
-
-
-
 
 
 
