--- a/admin.html
+++ b/admin.html
@@ -327,7 +327,7 @@
                                     </div>
                                     <div class="mt-8">
                                         <h3 class="text-lg font-medium">
-                                            <a href="#" class="focus:outline-none">
+                                            <a href="admin-message.html" class="focus:outline-none">
                                                 <!-- Extend touch target to entire panel -->
                                                 <span class="absolute inset-0" aria-hidden="true"></span>
                                                 Mensajes
