--- a/admin-user-edit.html
+++ b/admin-user-edit.html
@@ -212,7 +212,7 @@
                         </div>
 
                         <div class="flex justify-end">
-                            <a href="/admin-product.html">
+                            <a href="/admin-user.html">
 
                                 <button type="button"
                                     class="bg-white py-2 px-4 border border-gray-300 rounded-md shadow-sm text-sm font-medium text-gray-700 hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">Cancelar</button>
