--- a/registro.html
+++ b/registro.html
@@ -8,6 +8,8 @@
   <title>Free Tour Segovia</title>
   <link rel="stylesheet" href="/css/tailwind-out.css">
   <script src="js/base-script.js"></script>
+  <script src="js/scriptAPI.js"></script>
+  <script src="js/registro.js"></script>
 </head>
 
 <body class="h-full">
@@ -181,72 +183,22 @@
         </div>
   
         <div class="mt-8">
-          <div>
-            <div>
-              <p class="text-sm font-medium text-gray-700">Entrar con</p>
-  
-              <div class="mt-1 grid grid-cols-3 gap-3">
-                <div>
-                  <a href="#" class="w-full inline-flex justify-center py-2 px-4 border border-gray-300 rounded-md shadow-sm bg-white text-sm font-medium text-gray-500 hover:bg-gray-50">
-                    <span class="sr-only">Sign in with Facebook</span>
-                    <svg class="w-5 h-5 text-[#4267B2]" fill="currentColor" viewBox="0 0 20 20" aria-hidden="true">
-                      <path fill-rule="evenodd" d="M20 10c0-5.523-4.477-10-10-10S0 4.477 0 10c0 4.991 3.657 9.128 8.438 9.878v-6.987h-2.54V10h2.54V7.797c0-2.506 1.492-3.89 3.777-3.89 1.094 0 2.238.195 2.238.195v2.46h-1.26c-1.243 0-1.63.771-1.63 1.562V10h2.773l-.443 2.89h-2.33v6.988C16.343 19.128 20 14.991 20 10z" clip-rule="evenodd" />
-                    </svg>
-                  </a>
-                </div>
-  
-                <div>
-                  <a href="#" class="w-full inline-flex justify-center py-2 px-4 border border-gray-300 rounded-md shadow-sm bg-white text-sm font-medium text-gray-500 hover:bg-gray-50">
-                    <span class="sr-only">Sign in with Twitter</span>
-                    <svg class="w-5 h-5 text-[#1DA1F2]" fill="currentColor" viewBox="0 0 20 20" aria-hidden="true">
-                      <path d="M6.29 18.251c7.547 0 11.675-6.253 11.675-11.675 0-.178 0-.355-.012-.53A8.348 8.348 0 0020 3.92a8.19 8.19 0 01-2.357.646 4.118 4.118 0 001.804-2.27 8.224 8.224 0 01-2.605.996 4.107 4.107 0 00-6.993 3.743 11.65 11.65 0 01-8.457-4.287 4.106 4.106 0 001.27 5.477A4.073 4.073 0 01.8 7.713v.052a4.105 4.105 0 003.292 4.022 4.095 4.095 0 01-1.853.07 4.108 4.108 0 003.834 2.85A8.233 8.233 0 010 16.407a11.616 11.616 0 006.29 1.84" />
-                    </svg>
-                  </a>
-                </div>
-  
-                <div>
-                  <a href="#" class="w-full inline-flex justify-center py-2 px-4 border border-gray-300 rounded-md shadow-sm bg-white text-sm font-medium text-gray-500 hover:bg-gray-50">
-                    <span class="sr-only">Sign in with Google</span>
-                    <svg viewBox="0 0 48 48" class="w-5 h-5">
-                        <clipPath id="g">
-                          <path d="M44.5 20H24v8.5h11.8C34.7 33.9 30.1 37 24 37c-7.2 0-13-5.8-13-13s5.8-13 13-13c3.1 0 5.9 1.1 8.1 2.9l6.4-6.4C34.6 4.1 29.6 2 24 2 11.8 2 2 11.8 2 24s9.8 22 22 22c11 0 21-8 21-22 0-1.3-.2-2.7-.5-4z"/>
-                        </clipPath>
-                        <g class="colors" clip-path="url(#g)">
-                          <path fill="#FBBC05" d="M0 37V11l17 13z"/>
-                          <path fill="#EA4335" d="M0 11l17 13 7-6.1L48 14V0H0z"/>
-                          <path fill="#34A853" d="M0 37l30-23 7.9 1L48 0v48H0z"/>
-                          <path fill="#4285F4" d="M48 48L17 24l-4-3 35-10z"/>
-                        </g>
-                      </svg>
-                  </a>
-                </div>
-              </div>
-            </div>
-  
-            <div class="mt-6 relative">
-              <div class="absolute inset-0 flex items-center" aria-hidden="true">
-                <div class="w-full border-t border-gray-300"></div>
-              </div>
-              <div class="relative flex justify-center text-sm">
-                <span class="px-2 bg-white text-gray-500"> Or continue with </span>
-              </div>
-            </div>
-          </div>
+
   
           <div class="mt-6">
-            <form action="#" method="POST" class="space-y-6">
+            <form  method="POST" class="space-y-6">
 
               <div class="space-y-1">
                 <label for="password" class="block text-sm font-medium text-gray-700"> Nombre </label>
                 <div class="mt-1">
-                  <input id="password" name="password" type="password" autocomplete="current-password" required class="appearance-none block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm placeholder-gray-400 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm">
+                  <input id="name" name="name" type="text" autocomplete="name" required class="appearance-none block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm placeholder-gray-400 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm">
                 </div>
               </div>
 
               <div class="space-y-1">
-                <label for="password" class="block text-sm font-medium text-gray-700"> Apellidos </label>
+                <label for="surname" class="block text-sm font-medium text-gray-700"> Apellidos </label>
                 <div class="mt-1">
-                  <input id="password" name="password" type="password" autocomplete="current-password" required class="appearance-none block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm placeholder-gray-400 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm">
+                  <input id="surname" name="surname" type="text" autocomplete="surname" required class="appearance-none block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm placeholder-gray-400 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm">
                 </div>
               </div>
 
@@ -265,14 +217,14 @@
               </div>
 
               <div class="space-y-1">
-                <label for="password" class="block text-sm font-medium text-gray-700"> Repite la contraseña </label>
+                <label for="password2" class="block text-sm font-medium text-gray-700"> Repite la contraseña </label>
                 <div class="mt-1">
-                  <input id="password" name="password" type="password" autocomplete="current-password" required class="appearance-none block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm placeholder-gray-400 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm">
+                  <input id="password2" name="password2" type="password" autocomplete="current-password" required class="appearance-none block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm placeholder-gray-400 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm">
                 </div>
               </div>
   
               <div>
-                <button type="submit" class="w-full flex justify-center py-2 px-4 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">Enviar</button>
+                <button id="submit" type="submit" class="w-full flex justify-center py-2 px-4 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">Enviar</button>
               </div>
             </form>
           </div>
