User profile and edit profile

--- a/products.html
+++ b/products.html
@@ -8,6 +8,7 @@
   <title>Free Tour Segovia</title>
   <link rel="stylesheet" href="./css/tailwind-out.css">
   <script src="./js/base-script.js"></script>
+  <script src="./js/access-controll.js"></script>
   <script src="./js/scriptAPI.js"></script>
   <script src="./js/products.js"></script>
 </head>
