Upload photos to products and show them in gallery

--- a/booking-form.html
+++ b/booking-form.html
@@ -113,7 +113,7 @@
                             <input type="date" name="date" id="date" autocomplete="Date" required
                                 class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
                         <p id="availability" class="hidden">Hay <span id="current-avail"></span> plazas disponibles para el día seleccionado</p>
-                            </div>
+                            <span id="avail-error" class="text-red"></span> </div>
 
                         <div class="grid grid-cols-2 gap-5">
                             <div class="">
