--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
                             </div>
                             <div class="max-w-5xl mx-auto relative px-4 py-16 sm:px-6 sm:py-24 lg:py-32 lg:px-8">
                                 <h1 class="text-4xl font-extrabold tracking-tight sm:text-5xl lg:text-6xl">
-                                    <span class="block text-white text-5xl">FreeTour</span>
-                                    <span class="block text-white text-9xl">Segovia</span>
+                                    <span class="block text-white text-4xl lg:text-5xl">FreeTour</span>
+                                    <span class="block text-white text-6xl lg:text-9xl">Segovia</span>
                                 </h1>
-                                <p class="mt-6 text-2xl text-white sm:max-w-3xl drop-shadow font-bold">Conoce
+                                <p class="mt-6 text-md lg:text-2xl text-white sm:max-w-3xl drop-shadow font-bold">Conoce
                                     cada rincón de la ciudad de la mano de guías oficiales locales. Te contaremos los
                                     mejores sitios para comer, dónde salir y a qué monumentos entrar.</p>
                                 <div class="mt-10 max-w-sm mx-auto sm:max-w-none sm:flex sm:justify-center">
