--- a/template.html
+++ b/template.html
@@ -37,9 +37,9 @@
             <a id="tours" href="./products.html"
               class="border-transparent text-white hover:border-sky-500 text-white inline-flex items-center px-1 pt-1 border-b-2 text-sm font-medium">
               Tours </a>
-            <a id="comer" href="./index.html"
+            <a id="comer" href="./contact.html"
               class="border-transparent text-white hover:border-sky-500 text-white inline-flex items-center px-1 pt-1 border-b-2 text-sm font-medium">
-              Dónde comer en Segovia </a>
+              Contacto </a>
           </div>
         </div>
         <div class="hidden sm:ml-6 sm:flex sm:items-center">
