--- a/admin.html
+++ b/admin.html
@@ -49,20 +49,15 @@
                                     </div>
                                 </div>
                                 <div
-                                    class="border-t border-gray-200 bg-gray-50 grid grid-cols-1 divide-y divide-gray-200 sm:grid-cols-3 sm:divide-y-0 sm:divide-x">
+                                    class="border-t border-gray-200 bg-gray-50 grid grid-cols-1 divide-y divide-gray-200 sm:grid-cols-2 sm:divide-y-0 sm:divide-x">
                                     <div class="px-6 py-5 text-sm font-medium text-center">
-                                        <span class="text-gray-900">X</span>
-                                        <span class="text-gray-600">Reservas hoy</span>
+                                        <span id="today" class="text-gray-900"></span>
+                                        <span class="text-gray-600">Resevas hoy</span>
                                     </div>
 
                                     <div class="px-6 py-5 text-sm font-medium text-center">
-                                        <span class="text-gray-900">XX</span>
-                                        <span class="text-gray-600">Reservas esta semana</span>
-                                    </div>
-
-                                    <div class="px-6 py-5 text-sm font-medium text-center">
-                                        <span class="text-gray-900">XXX</span>
-                                        <span class="text-gray-600">Reservas este mes</span>
+                                        <span id="total-bookings" class="text-gray-900"></span>
+                                        <span class="text-gray-600">Reservas totales</span>
                                     </div>
                                 </div>
                             </div>
@@ -232,7 +227,7 @@
                             </div>
                         </section>
 
-                        <!-- Recent Hires -->
+                        <!-- Recent Messages -->
                         <section aria-labelledby="recent-hires-title">
                             <div class="rounded-lg bg-white overflow-hidden shadow">
                                 <div class="p-6">
@@ -240,90 +235,12 @@
                                         mensajes
                                     </h2>
                                     <div class="flow-root mt-6">
-                                        <ul role="list" class="-my-5 divide-y divide-gray-200">
-                                            <li class="py-4">
-                                                <div class="flex items-center space-x-4">
-                                                    <div class="flex-shrink-0">
-                                                        <img class="h-8 w-8 rounded-full"
-                                                            src="https://images.unsplash.com/photo-1519345182560-3f2917c472ef?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80"
-                                                            alt="">
-                                                    </div>
-                                                    <div class="flex-1 min-w-0">
-                                                        <p class="text-sm font-medium text-gray-900 truncate">Leonard
-                                                            Krasner</p>
-                                                        <p class="text-sm text-gray-500 truncate">@leonardkrasner</p>
-                                                    </div>
-                                                    <div>
-                                                        <a href="#"
-                                                            class="inline-flex items-center shadow-sm px-2.5 py-0.5 border border-gray-300 text-sm leading-5 font-medium rounded-full text-gray-700 bg-white hover:bg-gray-50">
-                                                            View </a>
-                                                    </div>
-                                                </div>
-                                            </li>
+                                        <ul id="last-messages" role="list" class="-my-5 divide-y divide-gray-200">
 
-                                            <li class="py-4">
-                                                <div class="flex items-center space-x-4">
-                                                    <div class="flex-shrink-0">
-                                                        <img class="h-8 w-8 rounded-full"
-                                                            src="https://images.unsplash.com/photo-1463453091185-61582044d556?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80"
-                                                            alt="">
-                                                    </div>
-                                                    <div class="flex-1 min-w-0">
-                                                        <p class="text-sm font-medium text-gray-900 truncate">Floyd
-                                                            Miles</p>
-                                                        <p class="text-sm text-gray-500 truncate">@floydmiles</p>
-                                                    </div>
-                                                    <div>
-                                                        <a href="#"
-                                                            class="inline-flex items-center shadow-sm px-2.5 py-0.5 border border-gray-300 text-sm leading-5 font-medium rounded-full text-gray-700 bg-white hover:bg-gray-50">
-                                                            View </a>
-                                                    </div>
-                                                </div>
-                                            </li>
-
-                                            <li class="py-4">
-                                                <div class="flex items-center space-x-4">
-                                                    <div class="flex-shrink-0">
-                                                        <img class="h-8 w-8 rounded-full"
-                                                            src="https://images.unsplash.com/photo-1502685104226-ee32379fefbe?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80"
-                                                            alt="">
-                                                    </div>
-                                                    <div class="flex-1 min-w-0">
-                                                        <p class="text-sm font-medium text-gray-900 truncate">Emily
-                                                            Selman</p>
-                                                        <p class="text-sm text-gray-500 truncate">@emilyselman</p>
-                                                    </div>
-                                                    <div>
-                                                        <a href="#"
-                                                            class="inline-flex items-center shadow-sm px-2.5 py-0.5 border border-gray-300 text-sm leading-5 font-medium rounded-full text-gray-700 bg-white hover:bg-gray-50">
-                                                            View </a>
-                                                    </div>
-                                                </div>
-                                            </li>
-
-                                            <li class="py-4">
-                                                <div class="flex items-center space-x-4">
-                                                    <div class="flex-shrink-0">
-                                                        <img class="h-8 w-8 rounded-full"
-                                                            src="https://images.unsplash.com/photo-1500917293891-ef795e70e1f6?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80"
-                                                            alt="">
-                                                    </div>
-                                                    <div class="flex-1 min-w-0">
-                                                        <p class="text-sm font-medium text-gray-900 truncate">Kristin
-                                                            Watson</p>
-                                                        <p class="text-sm text-gray-500 truncate">@kristinwatson</p>
-                                                    </div>
-                                                    <div>
-                                                        <a href="#"
-                                                            class="inline-flex items-center shadow-sm px-2.5 py-0.5 border border-gray-300 text-sm leading-5 font-medium rounded-full text-gray-700 bg-white hover:bg-gray-50">
-                                                            View </a>
-                                                    </div>
-                                                </div>
-                                            </li>
                                         </ul>
                                     </div>
                                     <div class="mt-6">
-                                        <a href="#"
+                                        <a href="./admin-message.html"
                                             class="w-full flex justify-center items-center px-4 py-2 border border-gray-300 shadow-sm text-sm font-medium rounded-md text-gray-700 bg-white hover:bg-gray-50">
                                             View all </a>
                                     </div>
