--- a/user-edit-profile.html
+++ b/user-edit-profile.html
@@ -10,7 +10,7 @@
     <script src="./js/base-script.js"></script>
     <script src="./js/access-controll.js"></script>
     <script src="./js/scriptAPI.js"></script>
-    <script src="./js/edit-profile.js"></script>
+    <script src="./js/user-edit-profile.js"></script>
 </head>
 
 <body>
